2008-06-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c:
	default background color: pale brown (like the website)
	
	* avatarsay.c (run_info):
	first search for the info files in ./doc/

2008-06-04  Andreas K. Foerster  <info@akfoerster.de>
	
	* avatarsay.c:
	quit-request: return to the main-menu first

	* avtfilechooser.c (get_file): improved
	* avatar.c (avt_get_menu): improved

2008-06-03  Andreas K. Foerster  <info@akfoerster.de>

	* avtfilechooser.c (get_file):
	major rewrite

	* avatar.c (avt_get_menu):
	feedback for mouse-motion in menu

2008-06-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (CSI_sequence):
	ignore CSI [ + 1 char

2008-05-31  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c:
	suppress warning for deprecated function (GCC 4 or later)

	* Makefile.in:
	use bzip2 to compress distribution files

	* avatar.c:
	cleanup: reorganize loading of image-data in a more object oriented way

2008-05-30  Andreas K. Foerster  <info@akfoerster.de>

	* configure:
	support --enable-link-sdl-image to directly link to SDL_image
	
	* avatar.c:
	support LINK_SDL_IMAGE definition

2008-05-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c:
	bundle up SDL_image stuff into one structure

	* akfavatar.h, avatar.c (avt_import_XPM, avt_show_image_XPM):
	new functions

2008-05-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (set_encoding, escape_sequence, process_subprogram):
	support for VT100 graphic characters

	* avatarsay.c (escape_sequence, CSI_sequence):
	ignore binray zero in datastream

	* avatarsay.c (process_subprogram, escape_sequence):
	experimental support for charsets G0 and G1 (linux-compatible)

	* avatarsay.c (escape_sequence, CSI_sequence):
	CAN or SUB cancel the escape sequence

	* avatarsay.c (escape_sequence):
	switching to UTF-8 and back to default (ESC % G, ESC % @)

2008-05-17  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (process_subprogram):
	set encoding to default_encoding
